--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -9,8 +9,8 @@ general {
 
 order += "wireless wlp1s0"
 wireless wlp1s0 {
-  format_up = "WiFi %essid"
-  format_down = "Wifi: Disconnected"
+  format_up = "WiFi: %essid"
+  format_down = "WiFi: Disconnected"
 }
 
 order += "memory"
