Dracula theme added

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -1,9 +1,9 @@
 general {
-  colors = false
-  color_good =     '#88b090'
-  color_degraded = '#ccdc90'
-  color_bad =      '#e89393'
-  interval = 5
+  colors = true
+  color_good = "#50FA7B"
+  color_degraded = "#F1FA8C"
+  color_bad = "#FF5555"
+  interval = 1
   markup = "pango"
 }
 
@@ -13,24 +13,37 @@ wireless wlp1s0 {
   format_down = "WiFi: Disconnected"
 }
 
-order += "memory"
-memory {
-  format= "RAM: %used"
+order += "volume master"
+volume master {
+  format = "<span color='#ff79c6'>VOL: %volume</span>"
+  format_muted = "<span color='#44475a'>VOL: %volume</span>"
+}
+
+order += "cpu_temperature 0"
+cpu_temperature 0 {
+        format = "<span color='#ffb86c'>TEMP: %degrees °C</span>"
+        format_above_threshold = "<span color='#ff5555'>TEMP: %degrees °C</span>"
+        max_threshold = 65
+        path = "/sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input"
 }
 
 order += "cpu_usage"
 cpu_usage {
-  format = "CPU: %usage"
   max_threshold = 75
+  degraded_threshold = 35
+  format = "<span color='#8be9fd'>CPU: %usage</span>"
+  format_above_threshold = "<span color='#ff5555'>CPU: %usage</span>"
+  format_above_degraded_threshold = "<span color='#f1fa8c'>CPU: %usage</span>"
 }
 
-order += "volume master"
-volume master {
-  format = "VOL: %volume"
-  format_muted = "VOL: %volume"
+order += "memory"
+memory {
+  format= "RAM: %used"
+  threshold_degraded = 65%
+  threshold_critical = 5%
 }
 
-order += "tztime local"
-tztime local {
-  format = "%H:%M"
+order += "time"
+time {
+  format = "%I:%M %p "
 }
