--- a/i3/config
+++ b/i3/config
@@ -136,11 +136,10 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-
 ## customization starts here ##
 
 # start dmenu
-bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -nf '#1ABC9C' -nb '#1F2D3A' -sb '#1ABC9C' -sf '#1F2D3A' -fn 'monospace-8' -l 5"
+bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -nf '#BD93F9' -nb '#282A36' -sb '#BD93F9' -sf '#44475A' -fn 'monospace-8' -l 5"
 
 # workspaces
 set $ws1 ""
@@ -178,6 +177,10 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
+# shuffle through workspaces
+bindsym $mod+Tab         workspace next
+bindsym $mod+Shift+Tab   workspace prev
+
 # change brightness
 bindsym XF86MonBrightnessUp exec light -A 10 # increase screen brightness
 bindsym XF86MonBrightnessDown exec light -U 10 # decrease screen brightness
@@ -185,14 +188,14 @@ bindsym XF86MonBrightnessDown exec light -U 10 # decrease screen brightness
 # i3status
 bar {
   colors {
-    background #1F2D3A
-    statusline #1ABC9C
-    separator #1F2D3A
+    background #282a36
+    statusline #6272a4
+    separator #282a36
 
     # colorclass       <border> <background> <text>
-    urgent_workspace   #1ABC9C  #1ABC9C     #1F2D3A
-    focused_workspace  #1ABC9C  #1ABC9C     #1F2D3A
-    inactive_workspace #1F2D3A  #1F2D3A     #1ABC9C
+    urgent_workspace   #bd93f9  #bd93f9     #44475a
+    focused_workspace  #bd93f9  #bd93f9     #44475a
+    inactive_workspace #1F2D3A  #1F2D3A     #bd93f9
     
   }
 
@@ -205,8 +208,10 @@ bar {
 exec_always feh --bg-fill /home/jose/Pictures/Wallpapers/Wallpaper_1.jpg
 
 # i3-gaps
-gaps inner 10
-gaps outer 5
+gaps inner 15
+gaps outer 0
+# smart_gaps on
+
 
 # for_window [class="^.*"] border pixel 3R
 for_window [class="^.*"] border pixel 0
@@ -221,5 +226,8 @@ bindsym $mod+p exec /home/jose/.config/polybar/docky/scripts/powermenu.sh
 
 # start applications
 bindsym $mod+F1 exec google-chrome
-bindsym $mod+F11 exec cinnamon-settings
+bindsym $mod+F2 exec code
+bindsym $mod+F3 exec gnome-calculator
+bindsym $mod+F10 exec cinnamon-settings
+bindsym $mod+F11 exec subl .config/i3/i3status.conf
 bindsym $mod+F12 exec subl .config/i3/config
