Set apps to specific workspaces

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -9,7 +9,8 @@ general {
 
 order += "wireless wlp1s0"
 wireless wlp1s0 {
-  format_up = "WiFi: %essid"
+ # format_up = "WiFi: %essid"
+  format_up = "WiFi: Connected"
   format_down = "WiFi: Disconnected"
 }
 
